--- a/app.json
+++ b/app.json
@@ -3,9 +3,13 @@
     "name": "gameplay",
     "slug": "gameplay",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "backgroundColor": "#070b24",
+      "resizeMode": "contain"
+    },
+    "assetBundlePatterns": ["**/*"]
   },
   "name": "gameplay"
 }
